# Software-Rasterizer

./: Cargo.toml  README.md  bench.sh
.cargo/: config
src/: bounding.rs  containers.rs  graphics.rs  image.rs  lib.rs  main.rs  math_util.rs  model.rs  physics.rs  simd_util.rs  test_image.rs  time_util.rs
src/image/: buffer.rs  sampler.rs
src/math_util/: fixed_point.rs  fixed_vector.rs  geometry.rs  math_tests.rs
src/math_util/math_tests/: fixed_point_tests.rs
src/system/: video.rs
